# TRLBot

./: .gitignore  .gitmodules  415632239724986368  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  main.cpp  quotes.json  raspi.toolchain.cmake
Matches/: 88566
Players/: 200724949592178689  275818183796195330  347109470805032960  415632239724986368
Replays/: 88566_Game1.replay  88566_Game2.replay  88566_Game3.replay  88566_Game4.replay
Teams/: 1012248960259342336  1012500360411238443
src/: BallchasingClient.cpp  CMakeLists.txt  CommandProcessor.cpp  Commands.cpp  Embeds.cpp  Game.cpp  Match.cpp  Player.cpp  RecordBook.cpp  Schedule.cpp  Team.cpp  Utilities.cpp
src/commands/: CMakeLists.txt  HelpCommand.cpp  MatchCommand.cpp  PingCommand.cpp  PlayerCommand.cpp  ScheduleCommand.cpp  TeamCommand.cpp  Utilities.cpp
src/commands/include/: CMakeLists.txt  HelpCommand.h  MatchCommand.h  PingCommand.h  PlayerCommand.h  ScheduleCommand.h  TeamCommand.h  Utilities.h
src/embeds/: CMakeLists.txt  MatchEmbeds.cpp  PlayerEmbeds.cpp  ScheduleEmbeds.cpp  TeamEmbeds.cpp  UtilityEmbeds.cpp
src/embeds/include/: CMakeLists.txt  MatchEmbeds.h  PlayerEmbeds.h  ScheduleEmbeds.h  TeamEmbeds.h  UtilityEmbeds.h
src/include/: BallchasingClient.h  CMakeLists.txt  CommandProcessor.h  Commands.h  Embeds.h  Game.h  Match.h  Player.h  RecordBook.h  Schedule.h  Team.h  Utilities.h
